test/libsolidity/syntaxTests/pragma/experimental_pragma_empty.sol
pragma experimental;
// ----
// SyntaxError 9679: (0-20='pragma experimental;'): Experimental feature name is missing.
